<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small_size"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_detail_hover">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal_size"
            android:layout_marginStart="@dimen/margin_big_size"
            android:layout_marginTop="@dimen/margin_small_size"
            android:text="@string/movie_title"
            android:textStyle="bold"
            android:textSize="@dimen/header_text_size"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/movie_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_big_size"
            android:layout_marginEnd="@dimen/margin_normal_size"
            android:layout_marginTop="@dimen/margin_small_size"
            android:text="@string/movie_date"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/movie_title"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_big_size"
            android:layout_marginEnd="@dimen/margin_normal_size"
            android:layout_marginTop="@dimen/margin_small_size"
            android:text="@string/movie_rating"
            android:textSize="@dimen/very_small_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"/>

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_big_size"
            android:layout_marginEnd="@dimen/margin_normal_size"
            android:layout_marginTop="@dimen/margin_small_size"
            android:text="@string/movie_popularity"
            android:textSize="@dimen/very_small_content"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>