<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.detail.DetailActivity"
    tools:keep="@layout/activity_detail">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:elevation="6dp"
            app:title="Detail Movie"
            tools:targetApi="lollipop">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View android:id="@+id/center"
                android:layout_width="1dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginStart="@dimen/margin_big_size"
                android:layout_marginTop="@dimen/margin_big_size"
                android:layout_marginEnd="@dimen/margin_normal_size"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/poster"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal_size"
                android:layout_marginTop="@dimen/margin_normal_size"
                android:text="@string/movie_title"
                android:textColor="#000000"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/center"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/txt_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal_size"
                android:layout_marginEnd="@dimen/margin_normal_size"
                android:text="@string/movie_date"
                android:textStyle="bold"
                android:textSize="@dimen/content_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/center"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal_size"
                android:layout_marginTop="@dimen/margin_small_size"
                android:text="@string/movie_date"
                app:layout_constraintTop_toBottomOf="@+id/txt_release"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/center"/>

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal_size"
                android:layout_marginTop="@dimen/margin_normal_size"
                android:text="@string/movie_rating"
                android:textSize="@dimen/small_content_text_size"
                app:layout_constraintTop_toBottomOf="@+id/tv_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/center"/>

            <TextView
                android:id="@+id/txt_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal_size"
                android:layout_marginEnd="@dimen/margin_normal_size"
                android:text="@string/movie_genres"
                android:textStyle="bold"
                android:textSize="@dimen/content_text_size"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/center"/>

            <TextView
                android:id="@+id/tv_genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_normal_size"
                android:layout_marginTop="@dimen/margin_small_size"
                android:text="@string/movie_genres"
                android:textSize="@dimen/small_content_text_size"
                android:ellipsize="marquee"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/txt_genres"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/center"/>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@+id/img_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="#FFC2C1C1"
                android:layout_marginTop="@dimen/margin_big_size"/>

            <TextView
                android:text="@string/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_overview"
                app:layout_constraintTop_toBottomOf="@+id/line"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="@dimen/margin_big_size"
                android:layout_marginStart="@dimen/margin_big_size"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/margin_big_size"
                android:layout_marginRight="@dimen/margin_big_size"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginTop="@dimen/margin_normal_size"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_description"
                android:layout_marginTop="@dimen/margin_normal_size"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                android:layout_marginEnd="@dimen/margin_big_size"
                android:layout_marginRight="@dimen/margin_big_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="@dimen/margin_big_size"
                android:layout_marginStart="@dimen/margin_big_size"
                android:textSize="15sp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"
                android:text="@string/movie_description"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>